--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
+    a {
+      color: blueviolet; border: 1px solid black;
+    }
   div {
     border: 1px solid black;
+  }
+  div a {
+    color: green;
   }
   </style>
   <title>Test Page: Don't Panic</title>
@@ -15,27 +21,27 @@
   <h1>I'm an h1</h1>
   <ul>
     <li>
-      <a href="http://example.com/" style="color: red;">Link</a>
+      <a href="http://example.com/">Link</a>
     </li>
     <li>
-      <a href="http://example.com/" style="color: red;">Link</a>
+      <a href="http://example.com/">Link</a>
     </li>
     <li>
-      <a href="http://example.com/" style="color: red;">Link</a>
+      <a href="http://example.com/">Link</a>
     </li>
   </ul>
   <h2>I'm an h2</h2>
   <div>
-    <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <a href="http://example.com/">I'm a link</a>
   </div>
   <div>
-    <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <a href="http://example.com/">I'm a link</a>
   </div>
   <div>
-    <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <a href="http://example.com/">I'm a link</a>
   </div>
   <div>
-    <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <a href="http://example.com/">I'm a link</a>
   </div>
 </body>
 </html>
