--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
     a {
-      color: blueviolet; border: 1px solid greenyellow;
+      color: blueviolet; border: 1px solid black;
     }
   div {
     border: 1px solid black;
