--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     a {
       color: blueviolet; border: 1px solid black;
     }
-  div {
-    border: 1px solid black;
-  }
-  div a {
-    color: green;
-  }
+    #exec-bio {
+      background-color: lightgray;
+    }
+    .bio-box {
+      border: 1px solid-black;
+    }
+    .bio-box a {
+      color: green;
+    }
+    
   </style>
   <title>Test Page: Don't Panic</title>
 </head>
@@ -31,16 +35,16 @@
     </li>
   </ul>
   <h2>I'm an h2</h2>
-  <div>
+  <div id="exec-bio" class="bio-box">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div>
+  <div class="bio-box">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div>
+  <div class="bio-box">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div>
+  <div class="bio-box">
     <a href="http://example.com/">I'm a link</a>
   </div>
 </body>
