--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
     a {
       color: blueviolet; border: 1px solid black;
     }
+    #my-id {
+      background-color: orange;
+    }
     #exec-bio {
       background-color: lightgray;
     }
     .bio-box {
       border: 1px solid-black;
     }
+    .my-class {
+      background-color: azure;
+    }
     .bio-box a {
       color: green;
     }
-    
+
   </style>
   <title>Test Page: Don't Panic</title>
 </head>
 <body>
   <h1>I'm an h1</h1>
   <ul>
-    <li>
+    <li id="my-id">
       <a href="http://example.com/">Link</a>
     </li>
     <li>
@@ -35,16 +41,16 @@
     </li>
   </ul>
   <h2>I'm an h2</h2>
-  <div id="exec-bio" class="bio-box">
+  <div id="exec-bio" class="bio-box my-class">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div class="bio-box">
+  <div class="bio-box my-class">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div class="bio-box">
+  <div class="bio-box my-class">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div class="bio-box">
+  <div class="bio-box my-class">
     <a href="http://example.com/">I'm a link</a>
   </div>
 </body>
