--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     .bio-box {
       border: 1px solid-black;
     }
-    .my-class {
-      background-color: azure;
+    .alert {
+      background: red;
+    }
+    #exec-bio .alert {
+      background: red;
     }
     .bio-box a {
       color: green;
@@ -41,16 +44,16 @@
     </li>
   </ul>
   <h2>I'm an h2</h2>
-  <div id="exec-bio" class="bio-box my-class">
+  <div id="exec-bio" class="bio-box alert">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div class="bio-box my-class">
+  <div class="bio-box">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div class="bio-box my-class">
+  <div class="bio-box">
     <a href="http://example.com/">I'm a link</a>
   </div>
-  <div class="bio-box my-class">
+  <div class="bio-box alert">
     <a href="http://example.com/">I'm a link</a>
   </div>
 </body>
