--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     .bio-box {
       border: 1px solid-black;
     }
+    .bio-box {
+      width: 50%
+    }
     .alert {
       background: red;
     }
