--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
       background-color: lightgray;
     }
     .bio-box {
-      width: 50%
-    }
-    .bio-box {
-      border: 1px solid-black;
+      width: 50%; border: 1px solid-black;
     }
     .alert {
       background: red;
