--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: lightgray;
     }
     .bio-box {
-      width: 50%; border: 1px solid-black;
+       border: 1px solid black; width: 50%; 
     }
     .alert {
       background: red;
