--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        border: 1px solid black; width: 50%; 
     }
     .alert {
-      background: red;
+      background: red !important;
     }
     #exec-bio.alert {
       background: red;
