--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </li>
   </ul>
   <h2>I'm an h2</h2>
-  <div id="exec-bio.alert" class="bio-box alert">
+  <div class="bio-box alert">
     <a href="http://example.com/">I'm a link</a>
   </div>
   <div class="bio-box">
