added new styling

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
        border: 1px solid black; width: 50%; 
     }
     .alert {
-      background: red !important;
+      background: red;
     }
     #exec-bio.alert {
       background: red;
     }
     .bio-box a {
       color: green;
+    }
+    .bio-box a {
+      color: pink;
     }
 
   </style>
