Add green border to div

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     a {
         color: red;
       }
+    div {
+      border: 1px solid green;
+    }
     /* SOCIAL STYLES */
     .social-link{
         color: blue;
