--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     a {
         color: red;
       }
-    div {
+    div.bio-box {
       border: 1px solid green;
     }
     /* SOCIAL STYLES */
