--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     div.bio-box {
       border: 1px solid green;
     }
+    html{background:red;} COMMENT AS AN EXERCISE */
+
     /* SOCIAL STYLES */
     .social-link{
         color: blue;
