--- a/index.html
+++ b/index.html
@@ -8,34 +8,35 @@
   <style>
     /* GLOBAL STYLES */
     a {
-        color: red;
+        color: #ff47d1;
       }
     div.bio-box {
       border: 1px solid green;
     }
     /* SOCIAL STYLES */
     .social-link {
-      color: blue;
+      background: rgba(150, 150 ,150, 0.5);
+      color: #00f;
     }
     /* BIO STYLES */
     .bio-box {
         border: 1px solid black;
       }
     .bio-box a {
-        color: green;
+        color: #0f0;
       } 
     </style>
   </head>
   <body>
     <h1 class="social-link">I'm an h1</h1>
     <ul>
-      <li>
+      <li class="social-link">
         <a href="http://example.com/">Link</a>
       </li>
-      <li>
+      <li class="social-link">
         <a href="http://example.com/">Link</a>
       </li>
-      <li>
+      <li class="social-link">
         <a href="http://example.com/">Link</a>
       </li>
     </ul>
