--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     div.bio-box {
       border: 1px solid green;
     }
+    h2{
+      font-size: 30px;
+    }
     /* SOCIAL STYLES */
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
@@ -21,6 +24,7 @@
     /* BIO STYLES */
     .bio-box {
         border: 1px solid black;
+        width: 200px;
       }
     .bio-box a {
         color: #0f0;
