--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
       color: #00f;
     }
     /* BIO STYLES */
+    .bio-wrapper {
+      width: 500px;
+    }
     .bio-box {
-        border: 10px solid black;
-        width: 200px;
+        border: 1px solid black;
+        width: 50%;
       }
     .bio-box a {
         color: #0f0;
@@ -45,6 +48,7 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
+    <div class="bio-wrapper">
     <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="http://twitter.com/mhartl" class="social-link">here</a>
@@ -90,9 +94,12 @@
     </div>
     <div class="bio-box">
       <h3>??</h3>
+      <div class="bio-copy">
       <p>
         The Future
       </p>
     </div>
+   </div>
+  </div> 
   </body>
 </html>
