--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </style>
   </head>
   <body>
+      <div style="border:1px solid #000;width: 50%;height:100%;">I'm a percent
+          test</div>
     <h1 class="social-link">I'm an h1</h1>
     <ul>
       <li class="social-link">
