--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     h2{
       font-size: 30px;
     }
+    body {
+      height: 800px;
+    }
     /* SOCIAL STYLES */
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
