--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     }
     .bio-box {
         border: 1px solid black;
+        font-size: 150%;
         margin: 10%;
         width: 50%;
       }
@@ -52,7 +53,7 @@
     <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="http://twitter.com/mhartl" class="social-link">here</a>
-      <div class="bio-copy">
+      <div class="bio-copy" font-size: 150;>
       <p>
         Known for his dazzling charm, rapier wit, and unrivaled humility,
         Michael is the creator of the
