Removed one font size

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="http://twitter.com/mhartl" class="social-link">here</a>
-      <div class="bio-copy" font-size: 150%;>
+      <div class="bio-copy">
       <p>
         Known for his dazzling charm, rapier wit, and unrivaled humility,
         Michael is the creator of the
