--- a/index.html
+++ b/index.html
@@ -23,16 +23,20 @@
     }
     /* BIO STYLES */
     .bio-wrapper {
+      font-size: 24px;
     }
     .bio-box {
         border: 1px solid black;
-        font-size: 150%;
+        font-size: 0.5em;
         margin: 10%;
         width: 50%;
       }
     .bio-box a {
         color: #0f0;
-      } 
+      }
+    .bio-copy {
+      font-size: 0.5em;
+    }
     </style>
   </head>
   <body>
