--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
   <style>
     /* GLOBAL STYLES */
     a {
-        color: #ff47d1;
+        color: #f00;
       }
     div.bio-box {
       border: 1px solid green;
-    }
-    h2{
-      font-size: 30px;
     }
     /* SOCIAL STYLES */
     .social-link {
@@ -27,12 +24,15 @@
     }
     .bio-box {
         border: 1px solid black;
-        font-size: 1em;
+        font-size: 1rem;
         margin: 10%;
         width: 50%;
       }
+    .bio-box h3 {
+      font-size: 1.5em;
+    }
     .bio-box a {
-        color: #0f0;
+        color: green;
       }
     .bio-copy {
       font-size: 1em;
