--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     .bio-box {
         border: 1px solid black;
         font-size: 1rem;
-        margin: 10%;
         width: 50%;
       }
     .bio-box h3 {
@@ -40,7 +39,10 @@
     </style>
   </head>
   <body>
-    <h1 class="social-link">I'm an h1</h1>
+    <h1 class="social-link"  
+    border: 1px solid black;
+    font-size: 1rem;
+    width: 50%;>I'm an h1</h1>
     <ul>
       <li class="social-link">
         <a href="http://example.com/">Link</a>
