--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
     </style>
   </head>
   <body>
-    <h1 class="social-link"  
-    border: 1px solid black;
-    font-size: 1rem;
-    width: 50%;>I'm an h1</h1>
+    <h1 class="social-link"
+    .bio-box {
+      border: 1px solid black;
+      font-size: 1rem;
+      width: 50%;
+    }
+    >I'm an h1</h1>
     <ul>
       <li class="social-link">
         <a href="http://example.com/">Link</a>
