--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         font-size: 1rem;
         width: 50%;
       }
+    .bio-box h1 {
+        border: 1px solid black;
+        font-size: 1rem;
+        width: 50%; 
+    }
     .bio-box h3 {
       font-size: 1.5em;
     }
@@ -39,13 +44,7 @@
     </style>
   </head>
   <body>
-    <h1 class="social-link"
-    .bio-box {
-      border: 1px solid black;
-      font-size: 1rem;
-      width: 50%;
-    }
-    >I'm an h1</h1>
+    <h1 class="social-link bio-box h1">I'm an h1</h1>
     <ul>
       <li class="social-link">
         <a href="http://example.com/">Link</a>
