--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     div.bio-box {
       border: 1px solid green;
     }
+    /* HERO STYLES */
+    .full-hero {
+      background-color: #c7dbfc;
+      height: 50vh;
+    }
     /* SOCIAL STYLES */
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
@@ -39,18 +44,20 @@
     </style>
   </head>
   <body>
-    <h1 class="social-link">I'm an h1</h1>
+  <div class="full-hero hero-home">
+    <h1>I'm an h1</h1>
     <ul>
-      <li class="social-link">
-        <a href="http://example.com/">Link</a>
+      <li>
+        <a href="http://example.com/" class="social-link">Link</a>
       </li>
       <li class="social-link">
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Link</a>
       </li>
       <li class="social-link">
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Link</a>
       </li>
     </ul>
+  </div>  
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
     <div class="bio-box">
