Global styling added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
     /* GLOBAL STYLES */
+html, body {
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  margin-top: 0;
+}
     a {
         color: #f00;
       }
