--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ h1 {
     .full-hero {
       background-color: #c7dbfc;
       height: 50vh;
-      width: 75vh;
+      width: 75vw;
     }
     /* SOCIAL STYLES */
     .social-link {
