--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1 {
     /* HERO STYLES */
     .full-hero {
       background-color: #c7dbfc;
-      height: 50vh;
+      height: 50vw;
       width: 75vw;
     }
     /* SOCIAL STYLES */
