--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ h1 {
   </head>
   <body>
   <div class="full-hero hero-home">
-    <h1>I'm an h1</h1>
+    <h1 font-size: 2em;>I'm an h1</h1>
     <ul>
       <li>
         <a href="http://example.com/" class="social-link">Link</a>
