--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 62.5%;
-}
+  }
 h1 {
   margin-top: 0;
-}
+  }
     a {
         color: #f00;
       }
@@ -31,8 +31,9 @@ h1 {
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
       color: #00f;
+      display: none;
     }
-    /* BIO STYLES */
+    /* BIO STYLES */ 
     .bio-wrapper {
     }
     .bio-box {
