--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ h1 {
     <h1 font-size: 2em;>I'm an h1</h1>
     <ul>
       <li>
-        <a href="http://example.com/" class="social-link">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" class="social-link">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" class="social-link">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
     </ul>
   </div>  
