Add display block

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ h1 {
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
       color: #00f;
+      display: block;
       height: 36px;
     }
     /* BIO STYLES */ 
