--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ h1 {
       color: #00f;
       display: inline-block;
       height: 36px;
+      width: 36px;
     }
     /* BIO STYLES */ 
     .bio-wrapper {
