--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@ h1 {
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
       color: #00f;
-      display: inline-block;
+      display: none;
       height: 36px;
       width: 36px;
+    }
+    .show {
+      display: block;
     }
     /* BIO STYLES */ 
     .bio-wrapper {
@@ -57,7 +60,7 @@ h1 {
   <div class="full-hero hero-home">
     <h1 font-size: 2em;>I'm an h1</h1>
     <ul>
-      <li>
+      <li class="show">
         <a href="http://example.com/">Link</a>
       </li>
       <li>
