--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ h1 {
   <div class="full-hero hero-home">
     <h1 font-size: 2em;>I'm an h1</h1>
     <ul>
-      <li class="show">
+      <li>
         <a href="http://example.com/">Link</a>
       </li>
       <li>
@@ -75,7 +75,7 @@ h1 {
     <div class="bio-wrapper">
     <div class="bio-box">
       <h3>Michael Hartl</h3>
-      <a href="http://twitter.com/mhartl" class="social-link">here</a>
+      <a href="http://twitter.com/mhartl" class="social-link show">here</a>
       <div class="bio-copy">
       <p>
         Known for his dazzling charm, rapier wit, and unrivaled humility,
