Add display inline

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ h1 {
     /* HERO STYLES */
     .full-hero {
       background-color: #c7dbfc;
+      display: inline;
       height: 20vw;
       width: 50vw;
     }
@@ -30,7 +31,7 @@ h1 {
     .social-link {
       background: rgba(150, 150 ,150, 0.5);
       color: #00f;
-      display: none;
+      display: inline-block;
       height: 36px;
       width: 36px;
     }
@@ -57,7 +58,7 @@ h1 {
     </style>
   </head>
   <body>
-  <div class="full-hero hero-home">
+  <div class="full-hero">
     <h1 font-size: 2em;>I'm an h1</h1>
     <ul>
       <li>
