Change test box

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ h1 {
     }
     .test-box {
     background: #9db6dd;
+    display: inline-block;
+    margin: 50px;
     width: 200px;
   }
   .test-box-nosizing {
