--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ h1 {
     }
     .test-box {
     background: #9db6dd;
+    width: 200px;
     margin: 50px;
   }
   .test-box-nosizing {
@@ -65,6 +66,7 @@ h1 {
   }
   .test-box-sizing {
     box-sizing: border-box;
+    width: auto;
   }
     </style>
   </head>
