--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h1 {
   .test-box-sizing {
     box-sizing: border-box;
     width: auto;
-    height: 100px;
+    margin: 100 0 0 0 px;
   }
     </style>
   </head>
