--- a/index.html
+++ b/index.html
@@ -1,153 +1,119 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <title>Test Page: Don't Panic</title>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <style>
-    /* GLOBAL STYLES */
-html, body {
-  margin: 0;
-  padding: 0;
-  }
-h1 {
-  margin-top: 0;
-  }
-    a {
+    <meta charset="utf-8">
+    <style>
+      /* GLOBAL STYLES */
+      h1 {
+        font-size: 7vw;
+        margin-top: 0;
+      }
+      a {
         color: #f00;
       }
-    div.bio-box {
-      border: 1px solid green;
-    }
-    /* HERO STYLES */
-    .full-hero {
-      background-color: #c7dbfc;
-      display: inline;
-      height: 20vw;
-      width: 50vw;
-    }
-    /* SOCIAL STYLES */
-    .social-link {
-      background: rgba(150, 150 ,150, 0.5);
-      color: #00f;
-      display: inline-block;
-      height: 36px;
-      width: 36px;
-    }
-    .show {
-      display: block;
-    }
-    /* BIO STYLES */ 
-    .bio-wrapper {
-    }
-    .bio-box {
-        border: 1px solid black;
-        font-size: 1em;
-        width: 50%;
+
+      /* HERO STYLES */
+      .full-hero {
+        background-color: #c7dbfc;
+        height: 50vh;
       }
-    .bio-box h3 {
-      font-size: 1.5em;
-    }
-    .bio-box a {
+
+      /* SOCIAL STYLES */
+      .social-link {
+        background: rgba(150, 150, 150, 0.5);
+        color: blue;
+        display: inline-block;
+        height: 36px;
+      }
+
+      /* BIO STYLES */
+      .bio-wrapper {
+        font-size: 24px;
+      }
+      .bio-box {
+        border: 1px solid black;
+        float: left;
+        font-size: 1rem;
+        padding: 2%;
+        width: 25%;
+      }
+      .bio-box h3 {
+        font-size: 1.5em;
+      }
+      .bio-copy {
+        font-size: 1em;
+      }
+      .bio-copy a {
         color: green;
       }
-    .bio-copy {
-      font-size: 1em;
-    }
-    .test-box {
-    background: #9db6dd;
-    width: 200px;
-    margin: 50px;
-  }
-  .test-box-nosizing {
-    border: 10px solid #000;
-    padding: 40px;
-  }
-  .test-box-sizing {
-    box-sizing: border-box;
-    width: auto;
-    margin: 100 0 0 0 px;
-  }
     </style>
   </head>
   <body>
-  <div class="full-hero">
-    <h1 font-size: 2em;>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-    </ul>
-  </div>  
+    <div class="full-hero hero-home">
+      <h1>I'm an h1</h1>
+      <ul>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+      </ul>
+    </div>
     <h2>I'm an h2</h2>
-    <div class="test-box">
-      200px wide
-    </div>
-    <div class="test-box test-box-nosizing">
-      200px wide + border + padding = 300px
-    </div>
-    <div class="test-box test-box-nosizing test-box-sizing">
-      200px wide + border + padding + box-sizing: border-box = 20px
-    </div>
     <div class="bio-wrapper">
-    <div class="bio-box">
-      <h3>Michael Hartl</h3>
-      <a href="http://twitter.com/mhartl" class="social-link show">here</a>
-      <div class="bio-copy">
-      <p>
-        Known for his dazzling charm, rapier wit, and unrivaled humility,
-        Michael is the creator of the
-        <a href="http://railstutorial.org/">Ruby on Rails
-        Tutorial</a> and principal author of the
-        <a href="https://learnenough.com/">
-        Learn Enough to Be Dangerous</a> introductory sequence. Michael
-        is also notorious as the founder of
-        <a href="http://tauday.com/">Tau Day</a> and author of
-        <a href="http://tauday.com/tau-manifesto"><em>The Tau
-        Manifesto</em></a>, but rumors that he's secretly a supervillain
-        are slightly exaggerated.
-      </p>
+      <div class="bio-box">
+        <h3>Michael Hartl</h3>
+        <a href="http://twitter.com/mhartl" class="social-link">here</a>
+        <div class="bio-copy">
+          <p>
+            Known for his dazzling charm, rapier wit, and unrivaled humility,
+            Michael is the creator of the
+            <a href="http://railstutorial.org/">Ruby on Rails
+            Tutorial</a> and principal author of the
+            <a href="https://learnenough.com/">
+            Learn Enough to Be Dangerous</a> introductory sequence. Michael
+            is also notorious as the founder of
+            <a href="http://tauday.com/">Tau Day</a> and author of
+            <a href="http://tauday.com/tau-manifesto"><em>The Tau
+            Manifesto</em></a>, but rumors that he's secretly a supervillain
+            are slightly exaggerated.
+          </p>
+        </div>
+      </div>
+      <div class="bio-box">
+        <h3>Lee Donahoe</h3>
+        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <div class="bio-copy">
+          <p>
+            When he's not literally swimming with sharks or hunting powder
+            stashes on his snowboard, you can find Lee in front of his computer
+            designing interfaces, doing front-end development, or writing some of
+            the interface-related Learn Enough tutorials.
+          </p>
+        </div>
+      </div>
+      <div class="bio-box">
+        <h3>Nick Merwin</h3>
+        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <div class="bio-copy">
+          <p>
+            You may have seen him shredding guitar live with Capital Cities on
+            Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a
+            true nerd at heart. He's just as happy shredding well-spec'd lines
+            of code from a tour bus as he is from his kitchen table.
+          </p>
+        </div>
+      </div>
+      <div class="bio-box">
+        <h3>??</h3>
+        <p>
+          The Future
+        </p>
       </div>
     </div>
-    <div class="bio-box">
-      <h3>Lee Donahoe</h3>
-      <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
-      <div class="bio-copy">
-      <p>
-        When he's not literally swimming with sharks or hunting powder stashes on
-        his snowboard, you can find Lee in front of his computer designing
-        interfaces, doing front-end development, or writing some of the
-        interface-related Learn Enough tutorials.
-      </p>
-      </div>
-    </div>
-    <div class="bio-box">
-      <h3>Nick Merwin</h3>
-      <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
-      <div class="bio-copy">
-      <p>
-        You may have seen him shredding guitar live with Capital Cities on Jimmy
-        Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
-        heart. He's just as happy shredding well-spec'd lines of code from a tour
-        bus as he is from his kitchen table.
-      </p>
-      </div>
-    </div>
-    <div class="bio-box">
-      <h3>??</h3>
-      <div class="bio-copy">
-      <p>
-        The Future
-      </p>
-    </div>
-   </div>
-  </div> 
   </body>
 </html>
