--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Test Page: Don't Panic</title>
@@ -32,6 +33,7 @@
       }
       .bio-box {
         border: 1px solid black;
+        box-sizing: border-box;
         float: left;
         font-size: 1rem;
         padding: 2%;
