--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           The Future
         </p>
       </div>
-      <p>
+      <p style="clear: left;">
         Learn Enough to Be Dangerous is a leader in the movement to teach the
         world <em>technical sophistication</em>, which includes both "hard
         skills" like coding, command lines, and version control, and "soft
