--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       .bio-box {
         border: 1px solid black;
         box-sizing: border-box;
-        float: left;
+        float: right;
         font-size: 1rem;
         padding: 2%;
         width: 25%;
