--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         display: block;
         font-size: 0;
         content: "";
-        clear:right;
+        clear:both;
         height: 0;
       }
       .bio-box {
