--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         background-color: #c0e0c3;
         font-size: 24px;
         height: 300px;
-        overflow: visible;
+        overflow: scroll;
       }
       .bio-wrapper:after{
         visibility: hidden;
@@ -45,7 +45,7 @@
       .bio-box {
         border: 1px solid black;
         box-sizing: border-box;
-        float: right;
+        float: left;
         font-size: 1rem;
         padding: 2%;
         width: 25%;
