--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         display: inline-block;
         height: 36px;
       }
+      .social-list {
+        list-style: none;
+        padding: 0;
+      }
+      .social-list > li {
+        display: inline-block;
+      }
 
       /* BIO STYLES */
       .bio-wrapper {
@@ -62,15 +69,18 @@
   <body>
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
-      <ul>
+      <ul class="social-list">
         <li>
-          <a href="http://example.com/" class="social-link">Link</a>
+          <a href="http://example.com/" 
+             class="social-link">Link</a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Link</a>
+          <a href="http://example.com/" 
+             class="social-link">Link</a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Link</a>
+          <a href="http://example.com/" 
+             class="social-link">Link</a>
         </li>
       </ul>
     </div>
