--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       .social-list {
         list-style: none;
         padding: 0;
-        text-align: center;
+        text-align: right;
       }
       .social-list > li {
         display: inline-block;
@@ -73,15 +73,15 @@
       <ul class="social-list">
         <li>
           <a href="http://example.com/" 
-             class="social-link">Link</a>
+             class="social-link">Link1</a>
         </li>
         <li>
           <a href="http://example.com/" 
-             class="social-link">Link</a>
+             class="social-link">Link2</a>
         </li>
         <li>
           <a href="http://example.com/" 
-             class="social-link">Link</a>
+             class="social-link">Link3</a>
         </li>
       </ul>
     </div>
