--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         padding: 2%;
         width: 25%;
       }
+      .bio-box > a {
+        color: #c68bf9
+      }
       .bio-box h3 {
         font-size: 1.5em;
       }
