--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         width: 25%;
       }
       .bio-box > a {
-        color: #c68bf9
+        color: #c68bf9;
       }
       .bio-box h3 {
         font-size: 1.5em;
