--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
+        margin: 20px;
         padding: 2%;
         width: 25%;
       }
