--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
-        margin: 3%;
+        margin: 40px 1%;
         padding: 2%;
-        width: 19%;
+        width: 23%;
       }
       .bio-box > a {
         color: #c68bf9;
