--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
+          <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="http://twitter.com/mhartl" class="social-link">here</a>
         <div class="bio-copy">
@@ -113,6 +114,7 @@
         </div>
       </div>
       <div class="bio-box">
+          <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
         <div class="bio-copy">
@@ -125,6 +127,7 @@
         </div>
       </div>
       <div class="bio-box">
+          <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
         <div class="bio-copy">
