--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
         color: #c68bf9;
       }
       .bio-box h3 {
-        font-size: 1.5em;
+        .
+        .
+        .
+      }
+      .bio-box img {
+        width: 100%;
       }
       .bio-copy {
         font-size: 1em;
