--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
         color: #c68bf9;
       }
       .bio-box h3 {
-        .
-        .
-        .
+        color: #ffffff;
+        font-size: 1.5em;
+        margin: -40px 0 1em;
+        text-align: center;
       }
       .bio-box img {
         width: 100%;
