--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       /* BIO STYLES */
       .bio-wrapper {
         font-size: 24px;
-        margin: auto;
+        margin: 0 auto 40;
         max-width: 960px;
         overflow: hidden;
       }
