--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
       a {
         color: #f00;
       }
-
       /* HERO STYLES */
       .full-hero {
         background-color: #c7dbfc;
         height: 50vh;
       }
-
       /* SOCIAL STYLES */
       .social-link {
         background: rgba(150, 150, 150, 0.5);
@@ -56,7 +54,7 @@
         float: left;
         font-size: 1rem;
         margin: 40px 1%;
-        padding: 2%;
+        padding: 0 2% 2%;
         width: 23%;
       }
       .bio-box > a {
