--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
       }
       .bio-copy {
         font-size: 1em;
-        padding: 20px;
       }
       .bio-copy a {
         color: green;
@@ -106,13 +105,13 @@
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
             Michael is the creator of the
-            <a href="http://railstutorial.org/">Ruby on Rails
+            <a href="http://railstutorial.org/" padding: 20px;>Ruby on Rails
             Tutorial</a> and principal author of the
-            <a href="https://learnenough.com/">
+            <a href="https://learnenough.com/" padding: 20px;>
             Learn Enough to Be Dangerous</a> introductory sequence. Michael
             is also notorious as the founder of
-            <a href="http://tauday.com/">Tau Day</a> and author of
-            <a href="http://tauday.com/tau-manifesto"><em>The Tau
+            <a href="http://tauday.com/" padding: 20px;>Tau Day</a> and author of
+            <a href="http://tauday.com/tau-manifesto" padding: 20px;><em>The Tau
             Manifesto</em></a>, but rumors that he's secretly a supervillain
             are slightly exaggerated.
           </p>
