--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
-        margin: 40px 1%;
-        padding: 0 2% 2%;
+        margin: 40px 1% 0;
+        padding: 2%;
         width: 23%;
       }
       .bio-box > a {
@@ -105,12 +105,12 @@
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
             Michael is the creator of the
-            <a href="http://railstutorial.org/" padding: 20px;>Ruby on Rails
+            <a href="http://railstutorial.org/">Ruby on Rails
             Tutorial</a> and principal author of the
-            <a href="https://learnenough.com/" padding: 20px;>
+            <a href="https://learnenough.com/">
             Learn Enough to Be Dangerous</a> introductory sequence. Michael
             is also notorious as the founder of
-            <a href="http://tauday.com/" padding: 20px;>Tau Day</a> and author of
+            <a href="http://tauday.com/">Tau Day</a> and author of
             <a href="http://tauday.com/tau-manifesto" padding: 20px;><em>The Tau
             Manifesto</em></a>, but rumors that he's secretly a supervillain
             are slightly exaggerated.
