--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       /* SOCIAL STYLES */
       .social-link {
         background: rgba(150, 150, 150, 0.5);
+        border-radius: 10px;
         color: blue;
         display: inline-block;
         height: 36px;
