--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
       /* SOCIAL STYLES */
       .social-link {
         background: rgba(150, 150, 150, 0.5);
-        border-radius: 10px;
+        border-radius: 99px;
         color: blue;
         display: inline-block;
         height: 36px;
+        width: 36px;
       }
       .social-list {
         list-style: none;
         padding: 0;
-        text-align: right;
+        text-align: centre;
       }
       .social-list > li {
         display: inline-block;
+        margin: 0 0 5em;
       }
 
       /* BIO STYLES */
