--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
       <ul class="social-list">
         <li>
           <a href="http://example.com/" 
-             class="social-link">Link1</a>
+             class="social-link">FB</a>
         </li>
         <li>
           <a href="http://example.com/" 
-             class="social-link">Link2</a>
+             class="social-link">TW</a>/a>
         </li>
         <li>
           <a href="http://example.com/" 
-             class="social-link">Link3</a>
+             class="social-link">GH</a>
         </li>
       </ul>
     </div>
@@ -103,7 +103,7 @@
       <div class="bio-box">
           <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
-        <a href="http://twitter.com/mhartl" class="social-link">here</a>
+        <a href="http://twitter.com/mhartl" class="social-link">TW</a>
         <div class="bio-copy">
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -123,7 +123,7 @@
       <div class="bio-box">
           <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
-        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <a href="https://twitter.com/leedonahoe" class="social-link">TW</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder
@@ -136,7 +136,7 @@
       <div class="bio-box">
           <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
-        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <a href="https://twitter.com/nickmerwin" class="social-link">TW</a>
         <div class="bio-copy">
           <p>
             You may have seen him shredding guitar live with Capital Cities on
