--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </li>
         <li>
           <a href="http://example.com/" 
-             class="social-link">TW</a>/a>
+             class="social-link">TW</a>
         </li>
         <li>
           <a href="http://example.com/" 
