--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       }
       .bio-copy {
         font-size: 1em;
+        line-height: 1.5;
       }
       .bio-copy a {
         color: green;
