--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         overflow: hidden;
       }
       .bio-box {
-        border: 1px solid black;
-        border-color: black black red;
+        border: 1px dotted black;
+        border-color:rgba(transparent, 0, 0, transparent);
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
